# CMakeConanCatchTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: example.cpp
test/: CMakeLists.txt
test/src/: example_test.cpp
