cmake_minimum_required(VERSION 3.25)

include(Catch)

add_executable(tests src/example_test.cpp)
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)

# Link the example library, replace this with the library or files you are developing
target_link_libraries(tests PRIVATE example_lib)

# If you want to add source files directly to the test executable, you can do so here
# target_sources(tests PRIVATE ../src/example.cpp)

target_compile_features(tests PRIVATE cxx_std_17)

catch_discover_tests(tests)